@@ -15,5 +15,14 @@ public sealed class EventCounterAdapterOptions
     /// </summary>
     public Func<string, EventCounterAdapterEventSourceSettings> EventSourceSettingsProvider { get; set; } = _ => new();
 
+    /// <summary>
+    /// How often we update event counter data.
+    /// </summary>
+    /// <remarks>
+    /// Event counters are quite noisy in terms of generating a lot of temporary objects in memory, so we keep the default moderate.
+    /// All this memory is immediately GC-able but in a near-idle app it can make for a scary upward trend on the RAM usage graph because the GC might not immediately release the memory to the OS.
+    /// </remarks>
+    public TimeSpan UpdateInterval { get; set; } = TimeSpan.FromSeconds(10);
+
     public CollectorRegistry Registry { get; set; } = Metrics.DefaultRegistry;
 }
